# -FSOT-Neuromorphic-AI-System

./: .gitignore  BRAIN_ORCHESTRATOR_ANALYSIS.md  COMPREHENSIVE_INTEGRATION_SUMMARY.md  DESKTOP_TRAINING_FIXES.md  FILE_MANAGER_TYPE_FIX_REPORT.md  FSOT_2_0_CORRECTED_Analysis_20250905_091025.json  FSOT_2_0_CORRECTED_Report_20250905_091025.md  FSOT_2_0_Comprehensive_Analysis_20250905_090720.json  FSOT_2_0_Comprehensive_Analysis_20250905_090749.json  FSOT_2_0_Comprehensive_Report_20250905_090720.md  FSOT_2_0_Comprehensive_Report_20250905_090749.md  FSOT_2_0_Corrected_Analysis_20250905_085935.md  FSOT_2_0_Corrected_Results_20250905_085935.json  FSOT_2_0_Deep_Analysis_Report_20250905_085259.md  FSOT_2_0_Deep_Analysis_Results_20250905_085259.json  FSOT_2_0_FINAL_Analysis_20250905_091241.json  FSOT_2_Detailed_Results_20250905_084130.json  FSOT_2_Quantum_Scientific_Comparison_20250905_084130.md  FSOT_ArXiv_Research_Integration_20250905_001946.json  FSOT_Auto_Enhancement_Report_20250905_002558.json  FSOT_BRAIN_RULES_IMPLEMENTATION_REPORT.md  FSOT_CI_FINAL_FIX_REPORT.md  FSOT_CI_YAML_FIX_REPORT.md  FSOT_Complete_Results_vs_Observables.md  FSOT_Complete_Scientific_Discovery_Report.md  FSOT_Comprehensive_Performance_Report_20250905_082937.json  FSOT_Comprehensive_Performance_Report_20250905_082937_Summary.md  FSOT_Continuous_Enhancement_Engine_20250905_071127.json  FSOT_Coordination_Report_20250904_231556.txt  FSOT_Critical_Research_Integration_20250905_070935.json  FSOT_ERROR_RESOLUTION_FINAL_REPORT.md  FSOT_Engineering_Integration_20250905_005942.json  FSOT_Environmental_Integration_20250905_003049.json  FSOT_Environmental_Integration_20250905_004258.json  FSOT_Environmental_Integration_20250905_004605.json  FSOT_FINAL_COMPREHENSIVE_STATUS_REPORT.md  FSOT_FOUNDATION_STATUS_REPORT.md  FSOT_Final_Validation_Conclusions_20250905_083052.json  FSOT_INTEGRATED_PIPELINE_SUCCESS_REPORT.md  FSOT_INTEGRATION_COMPLETE.md  (+178 more)
FSOT_Clean_System/: .fsot_restart_needed  AMYGDALA_IMPLEMENTATION_COMPLETE.md  BRAIN_INTEGRATION_SUCCESS.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETION_REPORT.md  DEPENDENCY_RESOLUTION.md  DEVELOPMENT_GUIDE.md  ENDLESS_LOOP_FIX.md  ENHANCEMENT_PLAN.md  FINAL_PYLANCE_SOLUTION.md  FINAL_SUCCESS_REPORT.md  FRONTAL_CORTEX_FIXES_REPORT.md  FSOT_HARDWIRING_COMPLETION_REPORT.md  FSOT_HARDWIRING_VERIFICATION.md  FSOT_ISSUES_RESOLUTION_REPORT.md  FSOT_SHUTDOWN_REPORT.md  FSOT_Theoretical_Integration_Report.md  PERFORMANCE_REPORT.md  PYLANCE_FIXES_REPORT.md  PYLANCE_FIX_GUIDE.md  PYLANCE_RESOLUTION.md  README.md  SYSTEM_SUMMARY.md  activate_autonomous_learning.py  activate_fsot.py  advanced_component_test.py  capability_analysis_and_migration.py  capability_analysis_report.json  cli_performance_test.py  (+51 more)
(+204 files in other folders)
